--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -8,15 +8,11 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
-            - name: Debug environment
-              run: |
-                echo "NEXT_PUBLIC_UMAMI length: ${#NEXT_PUBLIC_UMAMI}"
-              env:
-                NEXT_PUBLIC_UMAMI: ${{ secrets.NEXT_PUBLIC_UMAMI }}
+            - name: Create/Update .env file
+                run: |
+                echo "NEXT_PUBLIC_UMAMI=${{ secrets.NEXT_PUBLIC_UMAMI }}" >> .env
             - name: Build and publish the image
               run: |
                 docker login --username gitgitro --password ${{ secrets.GH_PAT}} ghcr.io
-                docker build \
-                    --build-arg NEXT_PUBLIC_UMAMI="${{ secrets.NEXT_PUBLIC_UMAMI }}" \
-                    -t ghcr.io/gitgitro/my-website:latest .
+                docker build -t ghcr.io/gitgitro/my-website:latest .
                 docker push ghcr.io/gitgitro/my-website:latest
